* Added SymbolLookupInfo::requestingSymbol which is passed in by   resolve_symbol(). * find_undefined_symbol_beos(): Does now check whether   SymbolLookupInfo::requestingSymbol is defined, and, if so, returns it   directly. This saves the time for the hash table lookup and also works   around broken files like SoundPlay. Fixes the runtime loader part of #7094.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40211 a95241bf-73f2-0310-859d-f6bbb57e9c96